--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -117,17 +117,36 @@ h2{
   float: left;
 }
 
-#fav-delete{
+.fav-delete{
   height: 10px;
   width: 10px;
   line-height: .5em;
   padding-left: 5%;
   font-size: .75em;
-  margin-bottom: 25%;
+  margin: 50%;
+  margin-top: 50%;
+}
+
+.submit-fav{
+  height: 1.4em;
+  width: 1.4em;
+  border-radius: 50%;
+  margin: 50%;
+  margin-top: 100%;
+  color:$sub-head-text-color;
+  background-color: $background-color;
 }
 
 .fav{
   display: block;
+  margin-bottom: 45%;
+  font-size: .75em;
+
+}
+
+.fav-text{
+  line-height: .75em;
+margin-bottom: 1%;
 }
 
 .spotify-el{
