--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -22,6 +22,7 @@
         <div class="card-reveal">
           <span class="card-title grey-text text-darken-4">Bio<i class="material-icons right">close</i></span>
           <p><%= user.bio %></p>
+          <h6> Here's a song that <%= user.username %> is in to:</h6>
             <iframe class="result-line" src="<%=user.favorites.sample.spotify_url %>" width="80" height="80" frameborder="0" allowtransparency="true"></iframe >
         </div>
       </div>
