--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -26,7 +26,7 @@
                 <input type="hidden" name="favorite[spotify_url]" value="<%%=test%>">
                 <input type="hidden" name="favorite[user_id]" value="<%= @user.id %>"/>
                 <input class='song_id' type="hidden" name="favorite[song_id]" value="<%%= song_id %>"/>
-                <input class ="button" type="submit" value="*">
+                <input class ="submit-fav button" type="submit" value="&hearts;">
               </form>
             </div>
     </script>
@@ -51,13 +51,14 @@
         <h5>Favorites</h5>
         <% @favorites.each do |favorite| %>
         <div class='fav'>
-        <h6><%= Song.find(favorite.song_id).name %></h6>
+        <p class="fav-text"><%= Song.find(favorite.song_id).name %></p>
           <iframe class="result-line" src="<%= favorite.spotify_url %>" width="80" height="80" frameborder="0" allowtransparency="true"></iframe >
           <form class="result-line" action="/favorites/<%= favorite.id %>" method="post">
             <input type="hidden" name="_method" value="delete">
             <button class='fav-delete' type="submit">x</button>
           </form>
         </div>
+        <br>
     <% end %>
       </div>
 
